--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,8 @@
     <maven.compiler.target>1.8</maven.compiler.target>
     <lombok.version>1.18.28</lombok.version>
     <junit.version>5.10.0</junit.version>
-    <mockito.version>5.5.0</mockito.version>
+    <mockito.version>4.11.0</mockito.version>
+    <system.lambda.version>1.2.1</system.lambda.version>
   </properties>
 
   <dependencies>
@@ -37,6 +38,12 @@
       <groupId>org.mockito</groupId>
       <artifactId>mockito-junit-jupiter</artifactId>
       <version>${mockito.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.github.stefanbirkner</groupId>
+      <artifactId>system-lambda</artifactId>
+      <version>${system.lambda.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
